# SystemMonitor

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  systemmonitor.cpp  systemmonitor.h
utils/: formatters.h  systeminfo.h  systeminfo_linux.cpp  systeminfo_win.cpp
widgets/: chartwidget.cpp  chartwidget.h  infocard.cpp  infocard.h
